SSL Config Price Wrapping Fix

--- a/src/sales/ssl/ssl-certificates/css/config-styles.less
+++ b/src/sales/ssl/ssl-certificates/css/config-styles.less
@@ -6,7 +6,7 @@
 
 #hostingConfig .buttons {
     float: none;
-    left: 550px;
+    left: 600px;
     top: -64px;
 }
 
@@ -74,7 +74,7 @@ span.sitelk-add-snt {
 }
 
 .sitelock-sent-container { 
-    min-width: 400px 
+    min-width: 450px 
 }
 
 #colFiveDiv { 
